--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-
 title: Catbook #Your awesome title
 email: #youremail@domain.com
 description: > # this means to ignore newlines until "baseurl"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    Write an awesome description for your new site here. You can edit this
+    line in _config.yml. It will appear in your document head meta (for
+    Google search results) and in your feed.xml site description.
 
 baseurl: # the subpath of the site
 url: http://starry99.github.io/catbook # the base hostname & protocol for your site
@@ -18,30 +17,30 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: #disqus shortname
 
 user:
-  name: Catbook
-  pic: /assets/img/cat.jpg
-  picAlt: "catbook"
-  job: a category-centric theme
-  aboutme: true # comment this out if you don't need the 'about' page.
+    name: Soblog
+    pic: /assets/img/profile_img.jpg
+    picAlt: 'Soblog'
+    job: My development diary.
+    aboutme: true # comment this out if you don't need the 'about' page.
 
 exclude:
-  - README.md
-  - LICENSE
-  - github
+    - README.md
+    - LICENSE
+    - github
 
 defaults:
-  - scope:
-      path: "_posts"
-      type: posts
-    values:
-      layout: post
-      comment: true   
+    - scope:
+          path: '_posts'
+          type: posts
+      values:
+          layout: post
+          comment: true
 
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"
-markdown: kramdown 
+markdown_ext: 'markdown,mkdown,mkdn,mkd,md'
+markdown: kramdown
 
 # Filtering Content
 show_drafts: null
 limit_posts: 0
-future:      false
+future: false
 unpublished: false
